_sass/_main.scss
@import "vendor/normalize";
@import "vendor/syntax";

$pink: #ffaff3;
$text-colour: #2a2020;
$link-colour: darken($pink, 40);
$font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
$shadow-slight: 0 0 0 1px rgba(50, 50, 93, 0.075), 0 0 1px #e9ecef, 0 2px 4px -2px rgba(138, 141, 151, 0.6);
$shadow: 0px 2px 5px 0 #979797;

$monospace-font-family: monospace;
$max-page-width: 820px;
$small-width: 500px;

* {
  box-sizing: border-box;
  color: $text-colour;
}

ul {
  list-style: none;
  padding-left: 0;
}

html {
  font-family: $font-family;
  font-size: 1.1rem;
}

body {
  border-left: 4px solid $pink;
  border-right: 4px solid $pink;

  @media (min-width: $small-width) {
    border-left: 16px solid $pink;
    border-right: 16px solid $pink;
  }
}

p {
  margin: 1rem 0;
}

p a,
p,
li {
  line-height: 1.6em;
}

a {
  text-decoration: none;
}

li a,
p a {
  color: $link-colour;
}

a:hover {
  color: lighten($link-colour, 7);
  text-decoration: underline;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
}

h1 {
  font-size: 2.5rem;
}

h2 {
  font-size: 2.25rem;
}

h3 {
  font-size: 2rem;
}

h4 {
  font-size: 1.75rem;
}

h5 {
  font-size: 1.5rem;
}

h6 {
  font-size: 1rem;
}

@media (min-width: $small-width) {
  h1 {
    font-size: 4rem;
  }

  h2 {
    font-size: 3.2rem;
  }

  h3 {
    font-size: 2.7rem;
  }

  h4 {
    font-size: 2rem;
  }

  h5 {
    font-size: 1.5rem;
  }

  h6 {
    font-size: 1rem;
  }
}

pre,
code {
  font-family: $monospace-font-family;
}

pre,
pre.highlight {
  background: #f5f5f5;
  border-radius: 2px;
  margin: 2rem 0.3em;
  overflow: auto;
  padding: 1rem;
  box-shadow: $shadow-slight;
}

li code,
p code {
  background: #f0f0f0;
  padding: 0.1em 0.2em;
}

.site-header,
.content {
  padding: 0.6em;
  margin-left: auto;
  margin-right: auto;
  max-width: $max-page-width;
}

.post__link {
  margin-top: 3rem;
}

.post-page-header {
  text-align: center;
  padding: 2rem 1rem;

  h1 {
    font-size: 2rem;
  }
}

.post__content {
  margin: 1em 0;

  h1,
  h2,
  h3,
  h4 {
    margin-top: 42px;
  }

  ul {
    list-style: unset;
    padding-left: 2em;
  }

  img {
    margin: 2rem auto;
    display: block;
    box-shadow: $shadow;
  }
}

.post__nav {
  font-size: 0.9em;
  text-align: center;
  margin: 2rem;

  a {
    color: #888;
    display: inline-block;
    padding: 1em 1em 0;
  }
}

.home-section-title {
  margin-top: 4.0rem;
  margin-bottom: 1.5rem;
}

.home-section-blurb {
  margin: 1.5rem 0;
}

.posts {
  margin-bottom: 2em;
  padding: 0;

  li {
    margin-bottom: 1rem;
  }
}

.posts__date {
  margin-top: 4px;
  opacity: 0.65;
  font-size: 0.9rem;
}

.posts__feed {
  color: #888;
  float: right;
  font-size: 0.9em;
  padding: 0 0.4em;
}

.site-header {
  padding-top: 3rem;
  text-align: center;
}

.site-header__home:hover {
  text-decoration: none;
}

.home-intro {
  margin-top: 3rem;
}

.home-nav {
  padding: 1rem;
  margin-top: 2rem;
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  font-size: 0.9rem;

  a {
    color: $link-colour;
    margin: 0 0.2rem;
  }
}

// Art section

.art {
  margin-bottom: 2rem;
  overflow: auto;
  clear: both;

  p {
    margin-top: 0;
  }

  p:last-child {
    margin-bottom: 0;
  }
}

.art-thumbnail {
  width: 196px;
  height: 110px;
  box-shadow: $shadow-slight;
  margin-right: 1rem;
  float: left;
}

// Portfolio

$space: 14px;

.portfolio-item {
  display: flow-root;
  clear: both;
  margin: 0 $space (3 * $space) $space;
}

.portfolio-item__thumbnail {
  display: block;
  margin: 0 auto $space auto;
  width: 196px;
  height: 110px;

  @media (min-width: $max-page-width) {
    float: left;
    margin: 0 $space 0 0;
  }
}

.portfolio-item__main-link {
  &:hover {
    text-decoration: none;
  }
}

.portfolio-item__title {
  font-size: 32px;
  text-align: center;

  @media (min-width: $max-page-width) {
    text-align: left;
  }
}

.portfolio-item__description p {
  margin: $space 0;
}

.highlight {
  .err {
    color: unset;
    background-color: unset;
  }

  .nf {
    color: #6f42c1;
    font-weight: normal;
  }

  .k {
    color: #d73a49;
    font-weight: normal;
  }

  .mi {
    color: #005cc5;
  }
}

